[gd_scene load_steps=10 format=3 uid="uid://cvmsq2fxbrjo0"]

[ext_resource type="TileSet" uid="uid://ckdj8m24olhk1" path="res://Assets/tilemap.tres" id="1_caohk"]
[ext_resource type="Script" path="res://Levels/level_13_skeleton_boss.gd" id="1_f4xhv"]
[ext_resource type="PackedScene" uid="uid://b5heeqig4y3my" path="res://Entities/Hero/hero.tscn" id="2_2qknr"]
[ext_resource type="PackedScene" uid="uid://duwpkeop6bhdk" path="res://World/Chest/treasure_chest.tscn" id="4_dvbd4"]
[ext_resource type="PackedScene" uid="uid://crpye41vvqrt0" path="res://World/CollapsingPlatform/collapsing_platform.tscn" id="5_lwah1"]
[ext_resource type="PackedScene" uid="uid://cmr0u3caw0o0l" path="res://Entities/Skeleton/skeleton_boss.tscn" id="6_es41m"]
[ext_resource type="PackedScene" uid="uid://caeeg0qxnw4sc" path="res://World/Trap/trap.tscn" id="7_em38m"]
[ext_resource type="PackedScene" uid="uid://hkwu5mgomxyh" path="res://World/Door/portal.tscn" id="8_euy41"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jty8b"]
size = Vector2(80, 56)

[node name="Level-13-Skeleton-Boss" type="Node2D" groups=["level"]]
script = ExtResource("1_f4xhv")

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("1_caohk")
format = 2
layer_0/name = "Walls"
layer_0/tile_data = PackedInt32Array(0, 131072, 1, 1, 131072, 1, 2, 131072, 1, 3, 131072, 1, 4, 131072, 1, 5, 131072, 1, 6, 131072, 1, 7, 131072, 1, 8, 131072, 1, 9, 131072, 1, 10, 131072, 1, 11, 131072, 1, 12, 131072, 1, 13, 131072, 1, 14, 131072, 1, 15, 131072, 1, 16, 131072, 1, 65534, 131072, 1, 65535, 131072, 1, 17, 131072, 1, 18, 131072, 1, 19, 131072, 1, 20, 131072, 1, -131074, 131072, 3, -131073, 131072, 3, -196608, 131072, 3, -196607, 131072, 3, -196606, 131072, 3, -196605, 131072, 3, -196604, 131072, 3, -196603, 131072, 3, -196602, 131072, 3, -196601, 131072, 3, -196600, 131072, 3, -196599, 131072, 3, -196598, 131072, 3, -196597, 131072, 3, -196596, 131072, 3, -196595, 131072, 3, -196594, 131072, 3, -196593, 131072, 3, -196592, 131072, 3, -196591, 131072, 3, -196590, 131072, 3, -196589, 131072, 3, -196588, 131072, 3, 65556, 196608, 2, 131092, 196608, 2, 196628, 196608, 2, 262164, 196608, 2, 327700, 196608, 2, 393236, 196608, 2, 458772, 393216, 2, 458773, 131072, 1, 458774, 131072, 1, 458775, 131072, 1, 458776, 131072, 1, 458777, 131072, 1, 458778, 131072, 1, 458779, 131072, 1, 458780, 131072, 1, 458781, 131072, 1, 458782, 131072, 1, 458783, 131072, 1, 458784, 131072, 1, 458785, 131072, 1, 458786, 131072, 1, 458787, 131072, 1, 458788, 131072, 1, 458789, 131072, 1, 458790, 131072, 1, 458791, 131072, 1, 458792, 131072, 1, 458793, 131072, 1, 458794, 131072, 1, 458795, 131072, 1, 458796, 131072, 1, -262124, 196608, 2, -327660, 196608, 2, -393196, 196608, 2, -458732, 196608, 2, -458707, 65536, 2, -393171, 65536, 2, -327635, 65536, 2, 393261, 65536, 2, 327725, 65536, 2, 262189, 65536, 2, 196653, 65536, 2, 131117, 65536, 2, 65581, 65536, 2, 45, 65536, 2, -65491, 65536, 2, -131027, 65536, 2, -196563, 65536, 2, -262099, 65536, 2, -524267, 131072, 3, -524266, 131072, 3, -524265, 131072, 3, -524264, 131072, 3, -524263, 131072, 3, -524262, 131072, 3, -524261, 131072, 3, -524260, 131072, 3, -524259, 131072, 3, -524258, 131072, 3, -524257, 131072, 3, -524256, 131072, 3, -524255, 131072, 3, -524254, 131072, 3, -524253, 131072, 3, -524252, 131072, 3, -524251, 131072, 3, -524250, 131072, 3, -524249, 131072, 3, -524248, 131072, 3, -524247, 131072, 3, -524246, 131072, 3, -524245, 131072, 3, -524244, 131072, 3, 458797, 327680, 2, -524243, 327680, 3, -524268, 393216, 3, -65539, 196608, 2, -3, 196608, 2, -131075, 393216, 3, 65533, 393216, 2)
layer_1/name = "Paint"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array(-524268, 786432, 2, -458732, 786432, 2, -393196, 786432, 2, -327660, 786432, 2, -262124, 786432, 2, -196588, 786432, 2, -131052, 786432, 2, -65516, 786432, 2, 20, 786432, 2, 65556, 786432, 2, 131092, 786432, 2, 196628, 786432, 2, 262164, 786432, 2, 327700, 786432, 2, 393236, 786432, 2, 458772, 786432, 2, -524267, 786432, 2, -458731, 720896, 1, -393195, 720896, 2, -327659, 720896, 2, -262123, 720896, 2, -196587, 720896, 2, -131051, 786432, 2, -65515, 786432, 2, 21, 720896, 2, 65557, 720896, 2, 131093, 720896, 2, 196629, 720896, 2, 262165, 720896, 2, 327701, 720896, 2, 393237, 720896, 2, 458773, 786432, 2, -524266, 786432, 2, -458730, 786432, 1, -393194, 786432, 2, -327658, 786432, 2, -262122, 786432, 2, -196586, 786432, 2, -131050, 786432, 2, -65514, 786432, 2, 22, 786432, 2, 65558, 786432, 2, 131094, 786432, 2, 196630, 786432, 2, 262166, 786432, 2, 327702, 786432, 2, 393238, 786432, 2, 458774, 786432, 2, -524265, 786432, 2, -458729, 786432, 1, -393193, 786432, 2, -327657, 786432, 2, -262121, 786432, 2, -196585, 786432, 2, -131049, 786432, 2, -65513, 786432, 2, 23, 786432, 2, 65559, 786432, 2, 131095, 786432, 2, 196631, 786432, 2, 262167, 786432, 2, 327703, 786432, 2, 393239, 786432, 2, 458775, 786432, 2, -524264, 786432, 2, -458728, 786432, 1, -393192, 786432, 2, -327656, 786432, 2, -262120, 786432, 2, -196584, 786432, 2, -131048, 786432, 2, -65512, 786432, 2, 24, 786432, 2, 65560, 786432, 2, 131096, 786432, 2, 196632, 786432, 2, 262168, 786432, 2, 327704, 786432, 2, 393240, 786432, 2, 458776, 786432, 2, -524263, 786432, 2, -458727, 786432, 1, -393191, 786432, 2, -327655, 786432, 2, -262119, 786432, 2, -196583, 786432, 2, -131047, 786432, 2, -65511, 786432, 2, 25, 786432, 2, 65561, 786432, 2, 131097, 786432, 2, 196633, 786432, 2, 262169, 786432, 2, 327705, 786432, 2, 393241, 786432, 2, 458777, 786432, 2, -524262, 786432, 2, -458726, 786432, 1, -393190, 786432, 2, -327654, 786432, 2, -262118, 786432, 2, -196582, 786432, 2, -131046, 786432, 2, -65510, 786432, 2, 26, 786432, 2, 65562, 786432, 2, 131098, 786432, 2, 196634, 786432, 2, 262170, 786432, 2, 327706, 786432, 2, 393242, 786432, 2, 458778, 786432, 2, -524261, 786432, 2, -458725, 786432, 1, -393189, 786432, 2, -327653, 786432, 2, -262117, 786432, 2, -196581, 786432, 2, -131045, 786432, 2, -65509, 786432, 2, 27, 786432, 2, 65563, 786432, 2, 131099, 786432, 2, 196635, 786432, 2, 262171, 786432, 2, 327707, 786432, 2, 393243, 786432, 2, 458779, 786432, 2, -524260, 786432, 2, -458724, 786432, 1, -393188, 786432, 2, -327652, 786432, 2, -262116, 786432, 2, -196580, 786432, 2, -131044, 786432, 2, -65508, 786432, 2, 28, 786432, 2, 65564, 786432, 2, 131100, 786432, 2, 196636, 786432, 2, 262172, 786432, 2, 327708, 786432, 2, 393244, 786432, 2, 458780, 786432, 2, -524259, 786432, 2, -458723, 786432, 1, -393187, 786432, 2, -327651, 786432, 2, -262115, 786432, 2, -196579, 786432, 2, -131043, 786432, 2, -65507, 786432, 2, 29, 786432, 2, 65565, 786432, 2, 131101, 786432, 2, 196637, 786432, 2, 262173, 786432, 2, 327709, 786432, 2, 393245, 786432, 2, 458781, 786432, 2, -524258, 786432, 2, -458722, 786432, 1, -393186, 786432, 2, -327650, 786432, 2, -262114, 786432, 2, -196578, 786432, 2, -131042, 786432, 2, -65506, 786432, 2, 30, 786432, 2, 65566, 786432, 2, 131102, 786432, 2, 196638, 786432, 2, 262174, 786432, 2, 327710, 786432, 2, 393246, 786432, 2, 458782, 786432, 2, -524257, 786432, 2, -458721, 786432, 1, -393185, 786432, 2, -327649, 786432, 2, -262113, 786432, 2, -196577, 786432, 2, -131041, 786432, 2, -65505, 786432, 2, 31, 786432, 2, 65567, 786432, 2, 131103, 786432, 2, 196639, 786432, 2, 262175, 786432, 2, 327711, 786432, 2, 393247, 786432, 2, 458783, 786432, 2, -524256, 786432, 2, -458720, 786432, 1, -393184, 786432, 2, -327648, 786432, 2, -262112, 786432, 2, -196576, 786432, 2, -131040, 786432, 2, -65504, 786432, 2, 32, 786432, 2, 65568, 786432, 2, 131104, 786432, 2, 196640, 786432, 2, 262176, 786432, 2, 327712, 786432, 2, 393248, 786432, 2, 458784, 786432, 2, -524255, 786432, 2, -458719, 786432, 1, -393183, 786432, 2, -327647, 786432, 2, -262111, 786432, 2, -196575, 786432, 2, -131039, 786432, 2, -65503, 786432, 2, 33, 786432, 2, 65569, 786432, 2, 131105, 786432, 2, 196641, 786432, 2, 262177, 786432, 2, 327713, 786432, 2, 393249, 786432, 2, 458785, 786432, 2, -524254, 786432, 2, -458718, 786432, 1, -393182, 786432, 2, -327646, 786432, 2, -262110, 786432, 2, -196574, 786432, 2, -131038, 786432, 2, -65502, 786432, 2, 34, 786432, 2, 65570, 786432, 2, 131106, 786432, 2, 196642, 786432, 2, 262178, 786432, 2, 327714, 786432, 2, 393250, 786432, 2, 458786, 786432, 2, -524253, 786432, 2, -458717, 786432, 1, -393181, 786432, 2, -327645, 786432, 2, -262109, 786432, 2, -196573, 786432, 2, -131037, 786432, 2, -65501, 786432, 2, 35, 786432, 2, 65571, 786432, 2, 131107, 786432, 2, 196643, 786432, 2, 262179, 786432, 2, 327715, 786432, 2, 393251, 786432, 2, 458787, 786432, 2, -524252, 786432, 2, -458716, 786432, 1, -393180, 786432, 2, -327644, 786432, 2, -262108, 786432, 2, -196572, 786432, 2, -131036, 786432, 2, -65500, 786432, 2, 36, 786432, 2, 65572, 786432, 2, 131108, 786432, 2, 196644, 786432, 2, 262180, 786432, 2, 327716, 786432, 2, 393252, 786432, 2, 458788, 786432, 2, -524251, 786432, 2, -458715, 786432, 1, -393179, 786432, 2, -327643, 786432, 2, -262107, 786432, 2, -196571, 786432, 2, -131035, 786432, 2, -65499, 786432, 2, 37, 786432, 2, 65573, 786432, 2, 131109, 786432, 2, 196645, 786432, 2, 262181, 786432, 2, 327717, 786432, 2, 393253, 786432, 2, 458789, 786432, 2, -524250, 786432, 2, -458714, 786432, 1, -393178, 786432, 2, -327642, 786432, 2, -262106, 786432, 2, -196570, 786432, 2, -131034, 786432, 2, -65498, 786432, 2, 38, 786432, 2, 65574, 786432, 2, 131110, 786432, 2, 196646, 786432, 2, 262182, 786432, 2, 327718, 786432, 2, 393254, 786432, 2, 458790, 786432, 2, -524249, 786432, 2, -458713, 786432, 1, -393177, 786432, 2, -327641, 786432, 2, -262105, 786432, 2, -196569, 786432, 2, -131033, 786432, 2, -65497, 786432, 2, 39, 786432, 2, 65575, 786432, 2, 131111, 786432, 2, 196647, 786432, 2, 262183, 786432, 2, 327719, 786432, 2, 393255, 786432, 2, 458791, 786432, 2, -524248, 786432, 2, -458712, 786432, 1, -393176, 786432, 2, -327640, 786432, 2, -262104, 786432, 2, -196568, 786432, 2, -131032, 786432, 2, -65496, 786432, 2, 40, 786432, 2, 65576, 786432, 2, 131112, 786432, 2, 196648, 786432, 2, 262184, 786432, 2, 327720, 786432, 2, 393256, 786432, 2, 458792, 786432, 2, -524247, 786432, 2, -458711, 786432, 1, -393175, 786432, 2, -327639, 786432, 2, -262103, 786432, 2, -196567, 786432, 2, -131031, 786432, 2, -65495, 786432, 2, 41, 786432, 2, 65577, 786432, 2, 131113, 786432, 2, 196649, 786432, 2, 262185, 786432, 2, 327721, 786432, 2, 393257, 786432, 2, 458793, 786432, 2, -524246, 786432, 2, -458710, 786432, 1, -393174, 786432, 2, -327638, 786432, 2, -262102, 786432, 2, -196566, 786432, 2, -131030, 786432, 2, -65494, 786432, 2, 42, 786432, 2, 65578, 786432, 2, 131114, 786432, 2, 196650, 786432, 2, 262186, 786432, 2, 327722, 786432, 2, 393258, 786432, 2, 458794, 786432, 2, -524245, 786432, 2, -458709, 786432, 1, -393173, 786432, 2, -327637, 786432, 2, -262101, 786432, 2, -196565, 786432, 2, -131029, 786432, 2, -65493, 786432, 2, 43, 786432, 2, 65579, 786432, 2, 131115, 786432, 2, 196651, 786432, 2, 262187, 786432, 2, 327723, 786432, 2, 393259, 786432, 2, 458795, 786432, 2, -524244, 786432, 2, -458708, 851968, 1, -393172, 851968, 2, -327636, 851968, 2, -262100, 851968, 2, -196564, 851968, 2, -131028, 851968, 2, -65492, 851968, 2, 44, 851968, 2, 65580, 851968, 2, 131116, 851968, 2, 196652, 851968, 2, 262188, 851968, 2, 327724, 851968, 2, 393260, 851968, 2, 458796, 786432, 2, -524243, 786432, 2, -458707, 786432, 2, -393171, 786432, 2, -327635, 786432, 2, -262099, 786432, 2, -196563, 786432, 2, -131027, 786432, 2, -65491, 786432, 2, 45, 786432, 2, 65581, 786432, 2, 131117, 786432, 2, 196653, 786432, 2, 262189, 786432, 2, 327725, 786432, 2, 393261, 786432, 2, 458797, 786432, 2, -131074, 786432, 2, -65538, 786432, 2, -2, 786432, 2, 65534, 786432, 2, -131073, 786432, 2, -65537, 786432, 2, -1, 786432, 2, 65535, 786432, 2, -196608, 786432, 2, -131072, 786432, 2, -65536, 786432, 2, 0, 786432, 2, -196607, 786432, 2, -131071, 786432, 2, -65535, 786432, 2, 1, 786432, 2, -196606, 786432, 2, -131070, 786432, 2, -65534, 786432, 2, 2, 786432, 2, -196605, 786432, 2, -131069, 786432, 2, -65533, 786432, 2, 3, 786432, 2, -196604, 786432, 2, -131068, 786432, 2, -65532, 786432, 2, 4, 786432, 2, -196603, 786432, 2, -131067, 786432, 2, -65531, 786432, 2, 5, 786432, 2, -196602, 786432, 2, -131066, 786432, 2, -65530, 786432, 2, 6, 786432, 2, -196601, 786432, 2, -131065, 786432, 2, -65529, 786432, 2, 7, 786432, 2, -196600, 786432, 2, -131064, 786432, 2, -65528, 786432, 2, 8, 786432, 2, -196599, 786432, 2, -131063, 786432, 2, -65527, 786432, 2, 9, 786432, 2, -196598, 786432, 2, -131062, 786432, 2, -65526, 786432, 2, 10, 786432, 2, -196597, 786432, 2, -131061, 786432, 2, -65525, 786432, 2, 11, 786432, 2, -196596, 786432, 2, -131060, 786432, 2, -65524, 786432, 2, 12, 786432, 2, -196595, 786432, 2, -131059, 786432, 2, -65523, 786432, 2, 13, 786432, 2, -196594, 786432, 2, -131058, 786432, 2, -65522, 786432, 2, 14, 786432, 2, -196593, 786432, 2, -131057, 786432, 2, -65521, 786432, 2, 15, 786432, 2, -196592, 786432, 2, -131056, 786432, 2, -65520, 786432, 2, 16, 786432, 2, -196591, 786432, 2, -131055, 786432, 2, -65519, 786432, 2, 17, 786432, 2, -196590, 786432, 2, -131054, 786432, 2, -65518, 786432, 2, 18, 786432, 2, -196589, 786432, 2, -131053, 786432, 2, -65517, 786432, 2, 19, 786432, 2)
layer_2/name = "Objects"
layer_2/enabled = true
layer_2/modulate = Color(1, 1, 1, 1)
layer_2/y_sort_enabled = false
layer_2/y_sort_origin = 0
layer_2/z_index = 0
layer_2/tile_data = PackedInt32Array()

[node name="Hero" parent="." instance=ExtResource("2_2qknr")]
position = Vector2(360, 112)

[node name="PlayerDetectionArea" type="Area2D" parent="."]
position = Vector2(528, 80)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionArea"]
position = Vector2(0, -4)
shape = SubResource("RectangleShape2D_jty8b")

[node name="Timer" type="Timer" parent="."]

[node name="TreasureChest" parent="." instance=ExtResource("4_dvbd4")]
visible = false
z_index = 10
position = Vector2(528, 112)

[node name="CollapsingPlatform" parent="." instance=ExtResource("5_lwah1")]
position = Vector2(664, 88)

[node name="CollapsingPlatform2" parent="." instance=ExtResource("5_lwah1")]
position = Vector2(584, 56)

[node name="CollapsingPlatform3" parent="." instance=ExtResource("5_lwah1")]
position = Vector2(472, 56)

[node name="CollapsingPlatform4" parent="." instance=ExtResource("5_lwah1")]
position = Vector2(392, 88)

[node name="SkeletonBoss" parent="." instance=ExtResource("6_es41m")]
position = Vector2(688, 112)

[node name="Trap" parent="." instance=ExtResource("7_em38m")]
position = Vector2(336, 16)
frequency_secs = 2.0
firing = false

[node name="Trap2" parent="." instance=ExtResource("7_em38m")]
position = Vector2(720, 64)
scale = Vector2(-1, 1)
frequency_secs = 2.0
firing = false

[node name="Portal" parent="." instance=ExtResource("8_euy41")]
position = Vector2(16, 0)
scale = Vector2(-1, 1)
address_in_level = 6
destination_level = 12
destination_address = 2
